force-app/main/default/objects/b3s__App_Translation__mdt/b3s__App_Translation__mdt.object-meta.xml
<CustomObject>
    <label>App Translation</label>
    <pluralLabel>App Translations</pluralLabel>
</CustomObject>