force-app/main/default/objects/b3s__App_Translation__mdt/fields/b3s__JSON__c.field-meta.xml
<CustomField>
    <fullName>b3s__JSON__c</fullName>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>