force-app/main/default/objects/b3s__App_Translation__mdt/fields/b3s__Language_Code__c.field-meta.xml
<CustomField>
    <fullName>b3s__Language_Code__c</fullName>
    <defaultValue>&quot;en-GB&quot;</defaultValue>
    <inlineHelpText>Accept ISO 639-1 standard language codes</inlineHelpText>
    <label>Language Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en-GB</fullName>
                <default>true</default>
                <label>en-GB</label>
            </value>
            <value>
                <fullName>bg-BG</fullName>
            </value>
            <value>
                <fullName>es-ES</fullName>
            </value>
            <value>
                <fullName>el-GR</fullName>
            </value>
            <value>
                <fullName>en-US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>