force-app/main/default/objects/b3s__App_Translation__mdt/fields/b3s__Type__c.field-meta.xml
<CustomField>
    <fullName>b3s__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduling</fullName>
                <default>true</default>
                <label>Scheduling</label>
            </value>
            <value>
                <fullName>Clock In / Out Component</fullName>
            </value>
            <value>
                <fullName>Timesheet Submission</fullName>
            </value>
            <value>
                <fullName>Timesheet Approval</fullName>
            </value>
            <value>
                <fullName>Client Shift Manager</fullName>
            </value>
            <value>
                <fullName>Terminal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>