force-app/main/default/objects/b3s__App_Translation__mdt/listViews/b3s__All.listView-meta.xml
<ListView>
    <fullName>b3s__All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>b3s__Type__c</columns>
    <columns>b3s__Language_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>